<resources>
    <string name="app_name">Don\'t bother</string>
    <string name="developer_name">Developed By Ajeet Yadav</string>
    <string name="version">v1.1</string>
    <string name="ad_interstitial_id_1">ca-app-pub-9120224455161858/3876123809</string>

    <string name="admob_app_id">ca-app-pub-9120224455161858~3117769423</string>

    <string name="ad_banner_id_1">ca-app-pub-9120224455161858/9435765760</string>


    <string name="thanks_note">Hope you like this App    ❤️</string>
    <string name="active">Running</string>
    <string name="status">Status:</string>
    <string name="inactive">Stopped</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello User!</string>
    <string name="slide_1_desc">Are you looking for Something which helps you to notify particular Call during Do Not Disturb Mode</string>

    <string name="slide_2_title">Customize Do Not Disturb</string>
    <string name="slide_2_desc">You can add particular number to get Alert during Do Not Disturb Mode  </string>

    <string name="slide_3_title">Add Icon on Notification Tile</string>
    <string name="slide_3_desc">You can Turn On/Off from Notification Tile</string>

    <string name="slide_4_title">Custom WhatsApp Notification</string>
    <string name="slide_4_desc">You can get Notification based on Particular Contact or word </string>


    <string name="title_activity_settings">Settings</string>
    <string name="do_not_disturb_mode">Do Not Disturb</string>
    <string name="silent_mode">Silent</string>
    <string name="mode_summary">To See Changes you have to change Status to Running. If Status is already Running then stop and again change Status to Running </string>


    <string name="linkedIn_url">LinkedIn Url</string>
    <string name="twitter_url">Twitter Url</string>
    <string name="facebook_url">Facebook Url</string>
    <string name="instagram_url">Instagram Url</string>
    <string name="github_url">Github Url</string>
    <string name="no_contact_found">No Contact Found</string>
    <string name="no_words_found">No Word Found</string>

    <string name="manage">Manage</string>
    <string name="whatsAppSwitchKey">whatsAppNotification</string>
    <string name="WhatsSwitchTitle">Enable WhatsApp Notification</string>
    <string name="notificationVisibilityKey">notification_visibility</string>
    <string name="notificationVisibilityTitle">Set Notification Visibility</string>
    <string name="ManageKey">manage_contacts</string>
    <string name="manageSummary">Add Contacts to Use this App feature</string>
    <string name="manageTitle">Contacts</string>
    <string name="whatAppAddContactKey">WhatsAppContact_key</string>
    <string name="whatsAppAddContactTitle">Add WhatsApp Contacts</string>
    <string name="whatsAppAddWordKey">WhatsAppWord_key</string>
    <string name="WhatsAppAddWordTitle">Add Words</string>
    <string name="callSettings">Call Settings</string>
    <string name="WarningText">Warning :- After making any change in settings of this app the above Switch will automatically Turn Off.If Not,then your requested to turn Off Above Switch and again turn it On.</string>
    <string name="SettingButton">Open Setting</string>
    <string name="notificationListener">NotificationListener</string>


    <string name="notification_listener_service">Notification Alert</string>
    <string name="notification_listener_service_explanation">For the app to work you need to enable the Notification Access because this App work on Notifications. Enable it now?</string>
    <string name="WhatsAppWordSummary">Case Sensitive</string>
    <string name="ads_to_be_shown_here">Ads to be shown here! \nIf you can read this, please feel free to close this! :)</string>
</resources>
