<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/githubLinkImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/github_url"
                android:padding="8dp"
                android:src="@drawable/ic_github" />

            <ImageView
                android:id="@+id/linkedInLinkImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/linkedIn_url"
                android:padding="8dp"
                android:src="@drawable/ic_linkedin" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/version"
            android:textSize="10sp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/developer_name"

            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

</RelativeLayout>