<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/SettingLayout">
        <FrameLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/githubLinkImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/github_url"
                android:padding="8dp"
                android:src="@drawable/ic_github" />

            <ImageView
                android:id="@+id/linkedInLinkImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/linkedin_url"
                android:padding="8dp"
                android:src="@drawable/ic_linkedin" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/version"
            android:textSize="10sp"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/developer_name"

            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>
</RelativeLayout>