<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/status"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/statusInfoActiveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/active"
        android:textAllCaps="true"
        android:textColor="#64dd17"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/statusInfoInactiveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/inactive"
        android:textAllCaps="true"
        android:textColor="#d50000"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <com.polyak.iconswitch.IconSwitch
        android:id="@+id/serviceIconSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:isw_default_selection="left"
        app:isw_icon_left="@drawable/ic_sad"
        app:isw_icon_right="@drawable/ic_smile"
        app:isw_icon_size="40dp"
        app:isw_inactive_tint_icon_left="#d50000"
        app:isw_inactive_tint_icon_right="#64dd17"
        app:isw_thumb_color_left="#d50000"
        app:isw_thumb_color_right="#64dd17" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:text="Open Setting!"
        android:textColor="@color/colorAccent" />


</RelativeLayout>